fixed language dropdown not being visible without scroll

--- a/src/components/SettingsDialog/Appearance/Appearance.scss
+++ b/src/components/SettingsDialog/Appearance/Appearance.scss
@@ -5,7 +5,8 @@
   display: flex;
   flex-direction: column;
   gap: 32px;
-  margin-bottom: $settings-dialog-container--bottom;
+  padding-bottom: $settings-dialog-container--bottom;
+  height: 100%;
   overflow-y: auto;
   flex-grow: 1;
 
